crates/tuirealm-stdlib/tests/snapshots/component_select__select_closed.snap
---
source: crates/tuirealm-stdlib/tests/component_select.rs
expression: rendered
---
┌Choose────────────────────────────────┐
│Option A                              │
└──────────────────────────────────────┘
