crates/tuirealm-stdlib/tests/snapshots/component_select__select_open.snap
---
source: crates/tuirealm-stdlib/tests/component_select.rs
expression: rendered
---
┌Choose────────────────────────────────┐
│Option A                              │
│                                      │
│Option A                              │
│Option B                              │
│Option C                              │
│                                      │
└──────────────────────────────────────┘
